Ágregué archivos principales

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angel Flores</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head> 
 <body>
     <h1>Angel Flores</h1>
 
-    <img src="https://imgs.search.brave.com/yPqC9TyC8lcEsQR9SSJSjHJtU1aNDQeS78JrWMiqpbI/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzc0Lzgw/L2YzLzc0ODBmM2Nm/MGY5OTViNmIzMGE4/ODMyNWQ0NjZkNDhi/LmpwZw"  alt="Goku ssj 4">
+    <img width="200px" src="./img/foto perfil.jpeg"  alt="Mi foto de Perfil">
+
     <h2>Portafolio</h2>
 
     <div>
@@ -24,23 +27,18 @@
         <h3>Mis Links</h3>
         <ul>
             <li>
-                <a href="www.linkedin.com/in/angel-david-flores-vergara">Linkedin</a>
+                <i class='bx bxl-linkedin-square'></i> <a href="https://www.linkedin.com/in/angel-david-flores-vergara">Linkedin</a>
             </li>
             <li>
-                <a href="https://github.com/KeaCluster">GitHub</a>
+                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208">GitHub</a>
             </li>
             <li>
-                <a href="https://www.instagram.com">Instagram</a>
+                <i class='bx bxl-instagram' ></i><a href="https://www.instagram.com">Instagram</a>
             </li>
         </ul>
 
         <hr>
 
-        <ol>
-            <li>Linkedin</li>
-            <li>GitHub</li>
-            <li>Instagram</li>
-        </ol>
     </div>
 
     <hr>
@@ -49,10 +47,10 @@
         <h3>Projects</h3>
         <ol>
             <li>
-                <a href="https://github.com/KeaCluster/dotfiles">proyect1</a>
+                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208/portafolio">proyect1</a>
             </li>
             <li>
-                <a href="https://github.com/KeaCluster/springboot-railway-deploy">proyect2</a>
+                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208">proyect2</a>
             </li>
         </ol>
     </div>
