Cambios en index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head> 
 <body>
+    <nav class="menu-navegacion">
+        <a href="#About Me">About Me></a>
+        <a href="#Contacto">Información de Contacto</a>
+
+    </nav>
     <h1>Angel Flores</h1>
 
     <img width="200px" src="./img/foto perfil.jpeg"  alt="Mi foto de Perfil">
@@ -24,7 +29,7 @@
     </div>
 
     <div>
-        <h3>Mis Links</h3>
+        <h3>Información de Contacto</h3>
         <ul>
             <li>
                 <i class='bx bxl-linkedin-square'></i> <a href="https://www.linkedin.com/in/angel-david-flores-vergara">Linkedin</a>
@@ -44,7 +49,7 @@
     <hr>
 
     <div>
-        <h3>Projects</h3>
+        <h3>Mis Proyectos</h3>
         <ol>
             <li>
                 <i class='bx bxl-github'></i><a href="https://github.com/Angy1208/portafolio">proyect1</a>
