Cambios en html y en orden de carpetas

--- a/html/index.html
+++ b/html/index.html
@@ -4,28 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angel Flores</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Portafolio Angel Flores</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head> 
 <body>
+    <header>
     <nav class="menu-navegacion">
-        <a href="#About Me">About Me></a>
+        <a href="#Sobre mí">Sobre mi</a>
         <a href="#Contacto">Información de Contacto</a>
-
+        <a href="#Mis Proyectos">Mis Proyectos</a>
     </nav>
+    </header>
+    
     <h1>Angel Flores</h1>
-
-    <img width="200px" src="./img/foto perfil.jpeg"  alt="Mi foto de Perfil">
+    <img width="200px" src="/img/foto perfil.jpeg"  alt="Mi foto de Perfil">
 
     <h2>Portafolio</h2>
 
     <div>
-        <h3>About Me</h3>
+        <h3>Sobre mí</h3>
         <p>Soy una persona trabajadora y honesta.</p>
         <p>Mi pasión por el mundo del desarrollo de software me ha llevado a aprender a crear plataformas/aplicaciones web,</p>
         <p>me gusta aprender constantemente sobre nuevos temas y enriquecer mi imaginación con ideas frescas.</p>
         <p>Por ello he buscado cursos activamente como el de Generation y el Certificado de Carrera de Google de Análisis de Datos.</p>
+    </div>
+
+    <hr>
+
+    <div>
+        <h3>Mis Proyectos</h3>
+        <ol>
+            <li>
+                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208/portafolio">proyect1</a>
+            </li>
+            <li>
+                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208">proyect2</a>
+            </li>
+        </ol>
     </div>
 
     <div>
@@ -41,23 +57,7 @@
                 <i class='bx bxl-instagram' ></i><a href="https://www.instagram.com">Instagram</a>
             </li>
         </ul>
-
         <hr>
-
-    </div>
-
-    <hr>
-
-    <div>
-        <h3>Mis Proyectos</h3>
-        <ol>
-            <li>
-                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208/portafolio">proyect1</a>
-            </li>
-            <li>
-                <i class='bx bxl-github'></i><a href="https://github.com/Angy1208">proyect2</a>
-            </li>
-        </ol>
     </div>
 </body>
 
